# futbol-results

./: .gitignore  README.md  manage.py  pyproject.toml
PollaFut/: asgi.py  settings.py  urls.py  wsgi.py
single_match/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
single_match/migrations/: 0001_initial.py  0002_alter_match_result_local_team_and_more.py  0003_alter_match_winning_team_and_more.py  0004_match_created_at_match_updated_at_and_more.py  0005_alter_matchguessresult_winning_team.py  0006_futboltable.py  0007_alter_futboltable_draft_and_more.py
templates/single_match/: new_match.html  single_matches.html  update_match_result.html
templates/teams_position/: teams_position.html
