[tool.poetry]
name = "pollafut"
version = "0.1.0"
description = ""
authors = ["Alejandro Castellanos <alejandro.castellanos@grupor5.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
